language/move-lang/tests/move_check/typing/constraints_not_satisfied_acquires_list.exp
error: 

   ┌── tests/move_check/typing/constraints_not_satisfied_acquires_list.move:6:20 ───
   │
 6 │     foo() acquires B<CupC<R>> {
   │                    ^^^^^^^^^^ Invalid 'acquires' annotation
   ·
 6 │     foo() acquires B<CupC<R>> {
   │                    ---------- The resource cannot take any type arguments, but found 1 type arguments
   │

error: 

   ┌── tests/move_check/typing/constraints_not_satisfied_acquires_list.move:2:20 ───
   │
 6 │     foo() acquires B<CupC<R>> {
   │                      ^^^^^^^ Constraint not satisfied.
   ·
 6 │     foo() acquires B<CupC<R>> {
   │                           - The resource type '0x8675309::M::R' does not satisfy the constraint 'copyable'
   ·
 3 │     resource struct R {}
   │     -------- The type's constraint information was declared here
   ·
 2 │     struct CupC<T: copyable> {}
   │                    -------- 'copyable' constraint declared here
   │

